--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -18,4 +18,4 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           script: |
             cd $HOME/www/
-            echo "Connexion réussie depuis GitHub Actions !"
+            echo "Connexion réussie SUR GitHub Actions !"
